--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,9 +21,9 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_30ssp"
-        android:layout_marginTop="@dimen/_10ssp"
-        android:layout_marginEnd="@dimen/_20ssp"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -33,14 +33,13 @@
             android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/myfont"
             android:text="Home"
             android:textColor="@color/accent"
             android:textSize="@dimen/_20ssp"
             android:textStyle="bold"/>
         <ImageView
             android:id="@+id/search_btn"
-            android:layout_width="@dimen/_30ssp"
+            android:layout_width="@dimen/_30sdp"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_search"/>
@@ -50,7 +49,6 @@
         android:id="@+id/whatToEat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/myfont"
         android:text="@string/what_would_you_like_to_eat"
         android:textSize="@dimen/_15ssp"
         android:textColor="@color/black"
@@ -61,11 +59,11 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/random_meal_card"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="@dimen/_25ssp"
-        android:layout_marginEnd="@dimen/_25ssp"
-        android:layout_marginTop="@dimen/_25ssp"
-        app:cardCornerRadius="@dimen/_10ssp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginEnd="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_25sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/whatToEat"
@@ -81,8 +79,7 @@
         android:id="@+id/tv_popular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/myfont"
-        android:layout_marginTop="18sp"
+        android:layout_marginTop="@dimen/_18sdp"
         android:text="@string/over_popular_items"
         android:textSize="@dimen/_17ssp"
         android:textColor="@color/black"
@@ -93,9 +90,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_popular_meals"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/_90sp"
-        android:layout_marginStart="@dimen/_25ssp"
-        android:layout_marginEnd="@dimen/_10ssp"
+        android:layout_height="@dimen/_90sdp"
+        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_popular"/>
     
@@ -103,8 +100,7 @@
         android:id="@+id/tv_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10ssp"
-        android:fontFamily="@font/myfont"
+        android:layout_marginTop="@dimen/_10sdp"
         android:text="Categories"
         android:textColor="@color/black"
         android:textSize="@dimen/_17ssp"
@@ -115,10 +111,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10ssp"
+        android:layout_marginStart="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
-        android:layout_marginEnd="@dimen/_25ssp"
-        app:cardCornerRadius="@dimen/_10ssp"
+        android:layout_marginEnd="@dimen/_25sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_category"
         >
